# ana-skills

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
ana_skills/: __init__.py  cli.py  config.py  models.py  resources.py  sync.py
ana_skills/commands/: __init__.py  sync_cmd.py  upload_cmd.py
skills/angular/frontend-component/: SKILL.md
skills/angular/frontend-component/references/: view-template.md  (+3 more)
skills/angular/frontend-dialog/: SKILL.md
skills/angular/frontend-forms/: SKILL.md
skills/angular/frontend-service/: SKILL.md
skills/angular/frontend-store/: SKILL.md
skills/common/code-simplifier/: SKILL.md
skills/common/commit/: SKILL.md
skills/common/skill-creator/: SKILL.md
skills/database/database-design/: SKILL.md
skills/database/database-model/: SKILL.md
skills/database/database-repository/: SKILL.md
skills/database/database-schema-edit-postgres/: SKILL.md
skills/database/database-schema-edit-sqlite/: SKILL.md
skills/database/database-setup-postgres/: SKILL.md
skills/database/database-setup-sqlite/: SKILL.md
skills/infra/create-web-app/: SKILL.md
skills/infra/mcc-ci-cd/: SKILL.md
skills/infra/mcc-infra/: SKILL.md
skills/infra/mcc-pipeline/: SKILL.md
skills/python/backend-logger/: SKILL.md
skills/python/backend-router/: SKILL.md
skills/python/backend-service/: SKILL.md
skills/python/backend-worker/: SKILL.md
skills/python/python-coding-conventions/: SKILL.md
skills/testing/test-playwright/: SKILL.md
skills/testing/test-python-integration/: SKILL.md
skills/testing/test-python-unit/: SKILL.md
(+173 files in other folders)
